--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Hi !"
+title                    : "Marcel Gibier"
 title_separator          : "-"
 name                     : &name "Marcel Gibier"
 description              : &description "PhD student on deep learning for audio processing"
@@ -305,6 +305,8 @@ plugins:
   - jekyll-sitemap
   - jekyll-redirect-from
   - jemoji
+  - jekyll-seo-tag
+
 
 # Mimic GitHub Pages with --safe
 whitelist:
