--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title                    : "Marcel Gibier"
 title_separator          : "-"
 name                     : &name "Marcel Gibier"
 description              : &description "PhD student on deep learning for audio processing"
-url                      : https://celmar97.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://marcelgibier.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "https://celmar97.github.io"
+repository               : "https://marcelgibier.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -45,7 +45,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/Celmar97"
+  github           : "https://github.com/marcelgibier"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
